// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InlineElement in development should render a warning 1`] = `
<span
  style="color: white; background-color: red;"
>
  Unknown inline node type
</span>
`;

exports[`InlineElement in development should render a warning and the children 1`] = `
<div>
  <span
    style="color: white; background-color: red;"
  >
    Unknown inline node type
  </span>
  <p>
    Foo
  </p>
</div>
`;

exports[`InlineElement in production should render null 1`] = `null`;

exports[`InlineElement in production should render the children 1`] = `
<p>
  Bar
</p>
`;
